fix alignment of first ad block

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -83,6 +83,10 @@ a {
 	}
 }
 
+.above-content-ad {
+	display: inline-block;
+}
+
 .page {
 	max-width: 55rem;
 	width: 100%;
@@ -484,110 +488,6 @@ a {
 		grid-area: description;
 		margin-top: 0;
 	}
-}
-
-.sharing {
-  margin: 1em 0;
-}
-.share-button {
-	padding: 0.5em;
-	display: inline-block;
-	color: var(--grey);
-	font-weight: 600;
-}
-.sharing__button:not(.active) .share-button {
-  opacity: 0.5;
-  transition: opacity 1s ease;
-  cursor: not-allowed;
-}
-.share-button:before {
-  content: "";
-  mask-repeat: no-repeat;
-  mask-size: contain;
-  width: 1rem;
-  height: 1rem;
-  display: inline-block;
-  line-height: 1;
-  vertical-align: middle;
-  margin-right: 0.4rem;
-  margin-top: -0.225rem;
-}
-.share-button--image:before {
-  mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 17 14' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.999 13.463c-1.483 0-2.256-.766-2.256-2.229V2.915C.743 1.445 1.516.687 3 .687h11.696c1.477 0 2.25.765 2.25 2.228v8.32c0 1.462-.773 2.228-2.25 2.228H3zM2.11 3.038v7.28l1.873-1.674c.28-.26.56-.383.875-.383.322 0 .643.13.93.39l1.258 1.141 3.09-2.762c.307-.28.642-.403 1.018-.403.37 0 .725.137 1.026.41l3.397 3.186V3.038c0-.663-.348-.991-.97-.991H3.08c-.629 0-.97.328-.97.991zm3.952 4.163c-.903 0-1.641-.738-1.641-1.647 0-.896.738-1.64 1.64-1.64.903 0 1.641.744 1.641 1.64 0 .909-.738 1.647-1.64 1.647z' fill='%23000' fill-rule='nonzero'/%3E%3C/svg%3E");
-  background-color: brown;
-  margin-top: 0;
-}
-.share-button--download {
-	padding: 0;
-	color: var(--text);
-  &:before {
-    mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 15 15' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.292 14.14c-3.87 0-7.068-3.2-7.068-7.069 0-3.876 3.192-7.075 7.061-7.075 3.87 0 7.075 3.2 7.075 7.075 0 3.87-3.199 7.069-7.068 7.069zm0-1.415a5.644 5.644 0 0 0 5.66-5.654 5.655 5.655 0 0 0-5.667-5.66 5.634 5.634 0 0 0-5.646 5.66 5.638 5.638 0 0 0 5.653 5.654zm0-2.113c-.185 0-.335-.075-.485-.232l-2.29-2.318a.572.572 0 0 1-.164-.416c0-.315.239-.547.567-.547.164 0 .314.068.41.177l.8.828.608.765-.061-1.401V4.132c0-.349.266-.595.615-.595.355 0 .615.246.615.595v3.336l-.061 1.408.615-.78.793-.82A.537.537 0 0 1 9.67 7.1c.321 0 .567.232.567.547 0 .17-.054.3-.17.417L7.783 10.38c-.15.157-.3.232-.492.232z' fill='%23000' fill-rule='nonzero'/%3E%3C/svg%3E");
-    background-color: var(--text);
-    margin-top: -0.1rem;
-    width: 1.25rem;
-    height: 1.25rem;
-  }
-}
-.share-button--facebook:before {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' Aaria-label='Facebook' role='img' viewBox='0 0 512 512'%3E%3Crect rx='15%25'%0Afill='%231877f2'/%3E%3Cpath d='M355.6 330l11.4-74h-71v-48c0-20.2 9.9-40 41.7-40H370v-63s-29.3-5-57.3-5c-58.5 0-96.7 35.4-96.7 99.6V256h-65v74h65v182h80V330h59.6z' fill='%23fff'/%3E%3C/svg%3E");
-  background-color: #1877f2;
-}
-.share-button--twitter:before {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%0Aaria-label='Twitter' role='img'%0AviewBox='0 0 512 512'%3E%3Crect%0Arx='15%25'%0Afill='%231da1f3'/%3E%3Cpath fill='%23fff' d='M437 152a72 72 0 0 1-40 12 72 72 0 0 0 32-40 72 72 0 0 1-45 17 72 72 0 0 0-122 65 200 200 0 0 1-145-74 72 72 0 0 0 22 94 72 72 0 0 1-32-7 72 72 0 0 0 56 69 72 72 0 0 1-32 1 72 72 0 0 0 67 50 200 200 0 0 1-105 29 200 200 0 0 0 309-179 200 200 0 0 0 35-37'/%3E%3C/svg%3E");
-  background-color: #1da1f3;
-}
-.share-button--url {
-  position: relative;
-  &:before {
-    mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.087 10.895c-.472-.096-.937-.37-1.34-.773-1.559-1.559-1.545-3.76-.007-5.29l2.94-2.94c1.538-1.538 3.732-1.552 5.29.013 1.552 1.552 1.546 3.746.008 5.284L11.975 9.2c.15-.601.088-1.23-.096-1.75l1.128-1.114c1.012-1.005 1.012-2.44-.007-3.466-1.012-1.012-2.447-1.012-3.459 0L6.718 5.692c-1.012 1.012-1.012 2.448 0 3.46.41.41.895.642 1.387.676a1.505 1.505 0 0 1-.26.315l-.758.752zm-5.353 3.24c-1.558-1.559-1.545-3.753 0-5.298l2.003-2.003a2.998 2.998 0 0 0 .09 1.743L2.704 9.698c-1.012 1.012-1.012 2.434.007 3.466 1.005 1.012 2.447 1.012 3.459 0l2.823-2.823c1.012-1.012 1.012-2.447 0-3.46-.417-.41-.902-.642-1.388-.676.048-.089.158-.212.247-.3l.772-.773c.465.102.93.369 1.333.78 1.559 1.55 1.552 3.752.007 5.29l-2.926 2.926c-1.552 1.552-3.746 1.565-5.305.007z' fill='%23000' fill-rule='nonzero'/%3E%3C/svg%3E");
-    background-color: var(--text);
-	}
-	&:after {
-    content: attr(data-copy-text);
-    font-weight: 400;
-    position: absolute;
-    top: 1.875em;
-    left: 0;
-    width: 100%;
-    transition: opacity 1s ease;
-    opacity: 0;
-    background: white;
-    border-radius: 8px;
-    color: #333;
-    &:hover, &:focus {
-      color: #333;
-    }
-  }
-  &.shared:after {
-    opacity: 0.8;
-  }
-}
-.sharing__promo {
-  position: relative;
-  background: var(--very-dilute-brand);
-  border-radius: 0.4em;
-  padding: 0.5em 1em;
-  color: var(--dark-grey);
-  strong {
-    font-weight: 600;
-  }
-  &:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 30%;
-    left: calc(50% - 445px / 3);
-    width: 0;
-    height: 0;
-    border: 0.7em solid transparent;
-    border-bottom-color: var(--very-dilute-brand);
-    border-top: 0;
-    margin-left: -0.7em;
-    margin-top: -0.7em;
-    @media (max-width: 25rem) {
-      left: 50%;
-    }
-  }
 }
 
 .setting-button {
